--- a/_includes/sewer-dealers.html
+++ b/_includes/sewer-dealers.html
@@ -892,31 +892,63 @@
           </h4>
         </div>
         <div id="sw-asia" class="panel-collapse collapse" role="tabpanel" aria-labelledby="sw-asia">
+          <div class="dealers-by-region">
+            <ul class="list-inline">
+              <li><a href="#sw-India" class="region">India</a></li>
+              <li><a href="#sw-Korea" class="region">Korea</a></li>
+            </ul>
+          </div>
           <ul class="list-group">
             <li class="list-group-item">
-              <h2 id="korea">Korea</h2>
+              <h2 id="sw-India">India</h2>
+              <!-- 1st row -->
+              <div class="row first">
+                <div class="col-sm-4">
+                  <h4>Whale Tankers</h4>
+                  <p>
+                  <span class="grey">Location:</span> West Midlands, United Kingdom<br/>
+                  <span class="grey">Phone:</span> +44 (0) 121 704 5700<br/>
+                  <span class="grey">Website:</span> <a href="http://whale.co.uk/" target="_blank">whale.co.uk</a>
+                  </p>
+                </div>
+              </div>
+              <div class="row text-right">
+                <a href="#top" title="To Top">
+                  <i class="fa fa-caret-up"></i><small class="thin"> Top</small>
+                </a>
+              </div>
+            </li>
+          </ul>
+          <ul class="list-group">
+            <li class="list-group-item">
+              <h2 id="sw-Korea">Korea</h2>
               <!-- 1st row -->
               <div class="row first">
                 <div class="col-sm-4">
                   <div class="dealer">
                     <h4>BC Taechang Industrial Corp.</h4>
-<p>
-<span class="grey">Location:</span> Busan, Korea<br/>
-<span class="grey">Phone:</span> (+82) 51 442 6191<br/>
-<span class="grey">Website:</span> <a href="http://www.bcinternational.co.kr" target="_blank">www.bcinternational.co.kr</a>
-</p>
+                    <p>
+                    <span class="grey">Location:</span> Busan, Korea<br/>
+                    <span class="grey">Phone:</span> (+82) 51 442 6191<br/>
+                    <span class="grey">Website:</span> <a href="http://www.bcinternational.co.kr" target="_blank">www.bcinternational.co.kr</a>
+                    </p>
                   </div>
                 </div>
                 <div class="col-sm-4">
                   <div class="dealer">
                     <h4>Sungbo Hydro Engineering Co., LTD.</h4>
-<p>
-<span class="grey">Location:</span> Seoul, Korea<br/>
-<span class="grey">Phone:</span> 02 2694 7881<br/>
-<span class="grey">Website:</span> <a href="http://www.sungbohe.co.kr" target="_blank">www.sungbohe.co.kr</a>
-</p>
+                    <p>
+                    <span class="grey">Location:</span> Seoul, Korea<br/>
+                    <span class="grey">Phone:</span> 02 2694 7881<br/>
+                    <span class="grey">Website:</span> <a href="http://www.sungbohe.co.kr" target="_blank">www.sungbohe.co.kr</a>
+                    </p>
                   </div>
                 </div>
+              </div>
+              <div class="row text-right">
+                <a href="#top" title="To Top">
+                  <i class="fa fa-caret-up"></i><small class="thin"> Top</small>
+                </a>
               </div>
             </li>
           </ul>
@@ -1010,12 +1042,12 @@
           <div class="dealers-by-region">
             <ul class="list-inline">
               <li><a href="#sw-Denmark" class="region">Denmark</a></li>
-              <li><a href="#sw-France" class="region">France</a></li>
               <li><a href="#sw-Germany" class="region">Germany</a></li>
               <li><a href="#sw-Italy" class="region">Italy</a></li>
               <li><a href="#sw-Netherlands" class="region">Netherlands</a></li>
               <li><a href="#sw-Norway" class="region">Norway</a></li>
               <li><a href="#sw-Poland" class="region">Poland</a></li>
+              <li><a href="#sw-Sweden" class="region">Sweden</a></li>
               <li><a href="#sw-UK" class="region">United Kingdom</a></li>
             </ul>
           </div>
@@ -1023,31 +1055,13 @@
             <li class="list-group-item">
               <h2 id="sw-Denmark">Denmark</h2>
               <div class="row first">
-                <div class="col-sm-4 dealer">
-                  <h4>C-TV Tekniske Artikler A/S</h4>
-<p>
-<span class="grey">Location:</span> Aalborg, Denmark<br/>
-<span class="grey">Phone:</span> (+45) 2060 3018<br/>
-<span class="grey">Website:</span> <a href="http://www.c-tv.dk" target="_blank">www.c-tv.dk</a>
-</p>
-                </div>
-              </div>
-              <div class="row text-right">
-                <a href="#top" title="To Top">
-                  <i class="fa fa-caret-up"></i><small class="thin"> Top</small>
-                </a>
-              </div>
-            </li>
-            <li class="list-group-item">
-              <h2 id="sw-France">France</h2>
-              <div class="row first">
-                <div class="col-sm-4 dealer">
-                  <h4>Rivard</h4>
-<p>
-<span class="grey">Location:</span> Daumeray, France<br/>
-<span class="grey">Phone:</span> (+33) 241 336 868<br/>
-<span class="grey">Website:</span> <a href="http://www.rivard.fr" target="_blank">www.rivard.fr</a>
-</p>
+                <div class="col-sm-4">
+                  <h4>Sihm Hojtryk A/S</h4>
+                  <p>
+                  <span class="grey">Location:</span> Esbjerg, Denmark<br/>
+                  <span class="grey">Phone:</span> (+45) 75 15 97 00<br/>
+                  <span class="grey">Website:</span> <a href="http://www.sihm.dk" target="_blank">www.sihm.dk</a>
+                  </p>
                 </div>
               </div>
               <div class="row text-right">
@@ -1059,21 +1073,13 @@
             <li class="list-group-item">
               <h2 id="sw-Germany">Germany</h2>
               <div class="row first">
-                <div class="col-sm-4 dealer">
+                <div class="col-sm-4">
                   <h4>Gerotec GmbH</h4>
-<p>
-<span class="grey">Location:</span> Neuried, Munich<br/>
-<span class="grey">Phone:</span> +49-89-752098<br/>
-<span class="grey">Website:</span> <a href="http://www.gerotec.de" target="_blank">www.gerotec.de</a>
-</p>
-                </div>
-                <div class="col-sm-4 dealer">
-                  <h4>Grunig &amp; Loske GmbH</h4>
-<p>
-<span class="grey">Location:</span> Laatzen/Hannover, Germany<br/>
-<span class="grey">Phone:</span> (+49) 0 5102 919901<br/>
-<span class="grey">Website:</span> <a href="http://www.gruelo.de" target="_blank">www.gruelo.de</a>
-</p>
+                  <p>
+                  <span class="grey">Location:</span> Neuried, Munich<br/>
+                  <span class="grey">Phone:</span> +49-89-752098<br/>
+                  <span class="grey">Website:</span> <a href="http://www.gerotec.de" target="_blank">www.gerotec.de</a>
+                  </p>
                 </div>
               </div>
               <div class="row text-right">
@@ -1085,22 +1091,14 @@
             <li class="list-group-item">
               <h2 id="sw-Italy">Italy</h2>
               <div class="row first">
-                <div class="col-sm-4 dealer">
+                <div class="col-sm-4">
                   <h4>Nuova Contec srl</h4>
-<p>
-<span class="text-info"><i class="fa fa-wrench"></i> <em>Authorized Repair Center</em></span><br />
-<span class="grey">Location:</span> Montereale Valcellina, Italy<br/>
-<span class="grey">Phone:</span> (+39) 0427 799505<br/>
-<span class="grey">Website:</span> <a href="http://www.nuovacontec.com" target="_blank">www.nuovacontec.com</a>
-</p>
-                </div>
-                <div class="col-sm-4 dealer">
-                  <h4>PTC Italiana</h4>
-<p>
-<span class="grey">Location:</span> Genova, Italy<br/>
-<span class="grey">Phone:</span> (+39) 0106 509422<br/>
-<span class="grey">Website:</span> <a href="http://www.ptcitaliana.com" target="_blank">www.ptcitaliana.com</a>
-</p>
+                  <p>
+                  <span class="text-info"><i class="fa fa-wrench"></i> <em>Authorized Repair Center</em></span><br />
+                  <span class="grey">Location:</span> Montereale Valcellina, Italy<br/>
+                  <span class="grey">Phone:</span> (+39) 0427 799505<br/>
+                  <span class="grey">Website:</span> <a href="http://www.nuovacontec.com" target="_blank">www.nuovacontec.com</a>
+                  </p>
                 </div>
               </div>
               <div class="row text-right">
@@ -1112,21 +1110,13 @@
             <li class="list-group-item">
               <h2 id="sw-Netherlands">Netherlands</h2>
               <div class="row first">
-                <div class="col-sm-4 dealer">
-                  <h4>DERC Salotech</h4>
-<p>
-<span class="grey">Location:</span> Oud-Beijerland, Netherlands<br/>
-<span class="grey">Phone:</span> (+31) 0186 621484<br/>
-<span class="grey">Website:</span> <a href="http://www.waterjetting.nl/Salotech-Sewer-Cleaning" target="_blank">www.salotech.nl</a>
-</p>
-                </div>
-                <div class="col-sm-4 dealer">
+                <div class="col-sm-4">
                   <h4>Rior B.V./Rioned</h4>
-<p>
-<span class="grey">Location:</span> Tillburg, Netherlands<br/>
-<span class="grey">Phone:</span> (+31) 0135 479100<br/>
-<span class="grey">Website:</span> <a href="http://www.rioned.com" target="_blank">www.rioned.com</a>
-</p>
+                  <p>
+                  <span class="grey">Location:</span> Tillburg, Netherlands<br/>
+                  <span class="grey">Phone:</span> (+31) 0135 479100<br/>
+                  <span class="grey">Website:</span> <a href="http://www.rioned.com" target="_blank">www.rioned.com</a>
+                  </p>
                 </div>
               </div>
               <div class="row text-right">
@@ -1138,13 +1128,13 @@
             <li class="list-group-item">
               <h2 id="sw-Norway">Norway</h2>
               <div class="row first">
-                <div class="col-sm-4 dealer">
-                  <h4>Magne Gitmark &amp; Co AS</h4>
-<p>
-<span class="grey">Location:</span> Lillesand, Norway<br/>
-<span class="grey">Phone:</span> (+47) 37 26 89 00<br/>
-<span class="grey">Website:</span> <a href="http://www.gitmark.no" target="_blank">www.gitmark.no</a>
-</p>
+                <div class="col-sm-4">
+                  <h4>AquaTeq Sweden AB</h4>
+                  <p>
+                  <span class="grey">Location:</span> Kalmar, Norway<br/>
+                  <span class="grey">Phone:</span> +46 (0)480 – 40 80 00<br/>
+                  <span class="grey">Website:</span> <a href="http://aquateq.se/" target="_blank">www.aquateq.se</a>
+                  </p>
                 </div>
               </div>
               <div class="row text-right">
@@ -1174,35 +1164,54 @@
             <li class="list-group-item">
               <h2 id="sw-UK">United Kingdom</h2>
               <div class="row first">
-                <div class="col-sm-4 dealer">
-                  <h4>Aquapower, Ltd.</h4>
-<p>
-<span class="grey">Location:</span> Malvern, United Kingdom<br/>
-<span class="grey">Phone:</span> (+44) (0) 1684 892065<br/>
-<span class="grey">Website:</span> <a href="http://www.aquapower.uk.com" target="_blank">www.aquapower.uk.com</a>
-</p>
-                </div>
-                <div class="col-sm-4 dealer">
+                <div class="col-sm-4">
                   <h4>Jetchem Systems</h4>
-<p>
-<span class="grey">Location:</span> Lancashire, United Kingdom<br/>
-<span class="grey">Phone:</span> (+44) (0) 1706 828888<br/>
-<span class="grey">Website:</span> <a href="http://www.jetchem.com" target="_blank">www.jetchem.com</a>
-</p>
+                  <p>
+                  <span class="grey">Location:</span> Lancashire, United Kingdom<br/>
+                  <span class="grey">Phone:</span> (+44) (0) 1706 828888<br/>
+                  <span class="grey">Website:</span> <a href="http://www.jetchem.com" target="_blank">www.jetchem.com</a>
+                  </p>
                 </div>
-                <div class="col-sm-4 dealer">
+                <div class="col-sm-4">
                   <h4>Whale Tankers</h4>
-<p>
-<span class="grey">Location:</span> West Midlands, United Kingdom<br/>
-<span class="grey">Phone:</span> +44 (0) 121 704 5700<br/>
-<span class="grey">Website:</span> <a href="http://whale.co.uk/" target="_blank">whale.co.uk</a>
-</p>
+                  <p>
+                  <span class="grey">Location:</span> West Midlands, United Kingdom<br/>
+                  <span class="grey">Phone:</span> +44 (0) 121 704 5700<br/>
+                  <span class="grey">Website:</span> <a href="http://whale.co.uk/" target="_blank">whale.co.uk</a>
+                  </p>
                 </div>
               </div>
               <div class="row text-right">
                 <a href="#top" title="To Top">
                   <i class="fa fa-caret-up"></i><small class="thin"> Top</small>
                 </a>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="panel panel-default">
+        <div class="panel-heading" role="tab" id="heading-sw-mideast">
+          <h4 class="panel-title">
+            <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#sw-mideast" aria-expanded="false" aria-controls="sw-mideast">
+              Middle East <i class="fa fa-plus"></i>
+            </a>
+          </h4>
+        </div>
+        <div id="sw-mideast" class="panel-collapse collapse" role="tabpanel" aria-labelledby="sw-mideast">
+          <ul class="list-group">
+            <li class="list-group-item">
+<!--              <h2 id="Turkey">Turkey</h2>-->
+              <!-- 1st row -->
+              <div class="row first">
+                <div class="col-sm-4">
+                  <h4>Whale Tankers</h4>
+                  <p>
+                  <span class="grey">Location:</span> West Midlands, United Kingdom<br/>
+                  <span class="grey">Phone:</span> +44 (0) 121 704 5700<br/>
+                  <span class="grey">Website:</span> <a href="http://whale.co.uk/" target="_blank">whale.co.uk</a>
+                  </p>
+                </div>
               </div>
             </li>
           </ul>
