--- a/_includes/waterblast-dealers.html
+++ b/_includes/waterblast-dealers.html
@@ -490,98 +490,29 @@
           </h4>
         </div>
         <div id="wb-europe" class="panel-collapse collapse" role="tabpanel" aria-labelledby="wb-europe">
-          <div class="row">
-            <div class="dealers-by-region col-sm-2">
-              <ul class="list-unstyled">
-                <li><a href="#Austria" class="region">Austria</a></li>
-                <li><a href="#Belgium" class="region">Belgium</a></li>
-                <li><a href="#Czech" class="region">Czech Republic</a></li>
-                <li><a href="#Denmark" class="region">Denmark</a></li>
-              </ul>
-            </div>
-            <div class="dealers-by-region col-sm-2">
-              <ul class="list-unstyled">
-                <li><a href="#Finland" class="region">Finland</a></li>
-                <li><a href="#France" class="region">France</a></li>
-                <li><a href="#Germany" class="region">Germany</a></li>
-                <li><a href="#Greece" class="region">Greece</a></li>
-              </ul>
-            </div>
-            <div class="dealers-by-region col-sm-2">
-              <ul class="list-unstyled">
-                <li><a href="#Hungary" class="region">Hungary</a></li>
-                <li><a href="#Italy" class="region">Italy</a></li>
-                <li><a href="#Netherlands" class="region">Netherlands</a></li>
-                <li><a href="#Norway" class="region">Norway</a></li>
-              </ul>
-            </div>
-            <div class="dealers-by-region col-sm-2">
-              <ul class="list-unstyled">
-                <li><a href="#Poland" class="region">Poland</a></li>
-                <li><a href="#Portugal" class="region">Portugal</a></li>
-                <li><a href="#Romania" class="region">Romania</a></li>
-                <li><a href="#Spain" class="region">Spain</a></li>
-              </ul>
-            </div>
-            <div class="dealers-by-region col-sm-2">
-              <ul class="list-unstyled">
-                <li><a href="#Sweden" class="region">Sweden</a></li>
-                <li><a href="#Switzerland" class="region">Switzerland</a></li>
-                <li><a href="#UK" class="region">United Kingdom</a></li>
-              </ul>
-            </div>
+          <div class="dealers-by-region">
+            <ul class="list-inline">
+              <li><a href="#Cyprus" class="region">Cyprus</a></li>
+              <li><a href="#Denmark" class="region">Denmark</a></li>
+              <li><a href="#Finland" class="region">Finland</a></li>
+              <li><a href="#Greece" class="region">Greece</a></li>
+              <li><a href="#Iceland" class="region">Iceland</a></li>
+              <li><a href="#Italy" class="region">Italy</a></li>
+              <li><a href="#Norway" class="region">Norway</a></li>
+              <li><a href="#Poland" class="region">Poland</a></li>
+              <li><a href="#Romania" class="region">Romania</a></li>
+            </ul>
           </div>
           <ul class="list-group">
             <li class="list-group-item">
-              <h2 id="Austria">Austria</h2>
-              <!-- 1st row -->
-              <div class="row first">
-                <div class="col-sm-4">
-                  <div class="dealer">
-                    <h4>WOMA GMBH Austria</h4>
-                    <p>
-                    <span class="grey">Location:</span> Wolkersorf, Austria<br/>
-                    <span class="grey">Phone:</span> (+43) 2245 32410<br/>
-                    <span class="grey">Website:</span> <a href="http://www.woma.at" target="_blank">www.woma.at</a>
-                    </p>
-                  </div>
-                </div>
-              </div>
-              <div class="row text-right">
-                <a href="#top" title="To Top">
-                  <i class="fa fa-caret-up"></i><small class="thin"> Top</small>
-                </a>
-              </div>
-            </li>
-            <li class="list-group-item">
-              <h2 id="Belgium">Belgium</h2>
-              <!-- 1st row -->
+              <h2 id="Cyprus">Cyprus</h2>
               <div class="row">
                 <div class="col-sm-4">
-                  <h4>DERC Salotech</h4>
+                  <h4>Combijet Manufacturing Ltd</h4>
                   <p>
-                  <span class="grey">Location:</span> Oud-Beijerland, Netherlands<br/>
-                  <span class="grey">Phone:</span> (+31) (0)186 621484<br/>
-                  <span class="grey">Website:</span> <a href="http://www.salotech.nl" target="_blank">www.salotech.nl</a>
-                  </p>
-                </div>
-              </div>
-              <div class="row text-right">
-                <a href="#top" title="To Top">
-                  <i class="fa fa-caret-up"></i><small class="thin"> Top</small>
-                </a>
-              </div>
-            </li>
-            <li class="list-group-item">
-              <h2 id="Czech">Czech Republic</h2>
-              <div class="row">
-                <div class="col-sm-4">
-                  <h4>
-NET - vysokotlaká technika, spol. s r. o.</h4>
-                  <p>
-                  <span class="grey">Location:</span> Staré Město pod Sněžníkem<br/>
-                  <span class="grey">Phone:</span> +420 602 766 466<br/>
-                  <span class="grey">Website:</span> <a href="http://net-waterjet.cz/" target="_blank">www.net-waterjet.cz</a>
+                  <span class="grey">Location:</span> Ayios Athanasios Industrial Area, Cyprus<br/>
+                  <span class="grey">Phone:</span> 00357 25 755866<br/>
+                  <span class="grey">Website:</span> <a href="http://www.combijet.com/" target="_blank">www.combijet.com</a>
                   </p>
                 </div>
               </div>
@@ -594,22 +525,6 @@ NET - vysokotlaká technika, spol. s r. o.</h4>
             <li class="list-group-item">
               <h2 id="Denmark">Denmark</h2>
               <div class="row">
-                <div class="col-sm-4">
-                  <h4>Den Jet</h4>
-                  <p>
-                  <span class="grey">Location:</span> Astrup, Denmark<br/>
-                  <span class="grey">Phone:</span> (+45) 98 55 88 68<br/>
-                  <span class="grey">Website:</span> <a href="http://www.denjet.com/fyn" target="_blank">www.denjet.com/fyn</a>
-                  </p>
-                </div>
-                <div class="col-sm-4">
-                  <h4>HIPAQ</h4>
-                  <p>
-                  <span class="grey">Location:</span> Svenstrup, Denmark<br/>
-                  <span class="grey">Phone:</span> (+45) 98 38 32 00<br/>
-                  <span class="grey">Website:</span> <a href="http://www.hipaq.dk" target="_blank">www.hipaq.dk</a>
-                  </p>
-                </div>
                 <div class="col-sm-4">
                   <h4>Sihm Hojtryk A/S</h4>
                   <p>
@@ -629,63 +544,11 @@ NET - vysokotlaká technika, spol. s r. o.</h4>
               <h2 id="Finland">Finland</h2>
               <div class="row">
                 <div class="col-sm-4">
-                  <h4>E.M. LEINO OY</h4>
+                  <h4>Aquajet Systems AB</h4>
                   <p>
-                  <span class="grey">Location:</span> Helsinki, Finland<br/>
-                  <span class="grey">Phone:</span> 09 4150 4100<br/>
-                  <span class="grey">Website:</span> <a href="http://www.emleino.fi" target="_blank">www.emleino.fi</a>
-                  </p>
-                </div>
-              </div>
-              <div class="row text-right">
-                <a href="#top" title="To Top">
-                  <i class="fa fa-caret-up"></i><small class="thin"> Top</small>
-                </a>
-              </div>
-            </li>
-            <li class="list-group-item">
-              <h2 id="France">France</h2>
-              <div class="row">
-                <div class="col-sm-4">
-                  <h4>DERC Salotech</h4>
-                  <p>
-                  <span class="grey">Location:</span> Oud-Beijerland, Netherlands<br/>
-                  <span class="grey">Phone:</span> (+31) (0)186 621484<br/>
-                  <span class="grey">Website:</span> <a href="http://www.salotech.nl" target="_blank">www.salotech.nl</a>
-                  </p>
-                </div>
-                <div class="col-sm-4">
-                  <h4>PBS SARL</h4>
-                  <p>
-                  <span class="grey">Location:</span> Broglie, France<br/>
-                  <span class="grey">Phone:</span> (+33) (0)2 32 44 63 78<br/>
-                  <span class="grey">Website:</span> <a href="http://www.pbs-europe.com" target="_blank">www.pbs-europe.com</a>
-                  </p>
-                </div>
-                <div class="col-sm-4">
-                  <h4>Rivard</h4>
-                  <p>
-                  <span class="grey">Location:</span> Daumeray, France<br/>
-                  <span class="grey">Phone:</span> (+33) (0)2 41 33 68 68<br/>
-                  <span class="grey">Website:</span> <a href="http://www.rivard.fr" target="_blank">www.rivard.fr</a>
-                  </p>
-                </div>
-              </div>
-              <div class="row text-right">
-                <a href="#top" title="To Top">
-                  <i class="fa fa-caret-up"></i><small class="thin"> Top</small>
-                </a>
-              </div>
-            </li>
-            <li class="list-group-item">
-              <h2 id="Germany">Germany</h2>
-              <div class="row">
-                <div class="col-sm-4">
-                  <h4>Salotech GmbH</h4>
-                  <p>
-                  <span class="grey">Location:</span> Seevetal, Germany<br/>
-                  <span class="grey">Phone:</span> (+49) (0) 4105 13690 00<br/>
-                  <span class="grey">Website:</span> <a href="http://www.salotech.de" target="_blank">www.salotech.de</a>
+                  <span class="grey">Location:</span> Holsbybrunn, Sweden<br/>
+                  <span class="grey">Phone:</span> (+46) 383 50801<br/>
+                  <span class="grey">Website:</span> <a href="http://www.aquajet.se" target="_blank">www.aquajet.se</a>
                   </p>
                 </div>
               </div>
@@ -714,14 +577,14 @@ NET - vysokotlaká technika, spol. s r. o.</h4>
               </div>
             </li>
             <li class="list-group-item">
-              <h2 id="Hungary">Hungary</h2>
+              <h2 id="Iceland">Iceland</h2>
               <div class="row">
                 <div class="col-sm-4">
-                  <h4>Aquaprod LTD</h4>
+                  <h4>Nuova Contec SRL</h4>
                   <p>
-                  <span class="grey">Location:</span> Pecs, Hungary<br/>
-                  <span class="grey">Phone:</span> (+36) 72 525 031/032<br/>
-                  <span class="grey">Website:</span> <a href="http://www.aquaprod.hu" target="_blank">www.aquaprod.hu</a>
+                  <span class="grey">Location:</span> Montereale Valcellina, Italy<br/>
+                  <span class="grey">Phone:</span> (+39) 0427 799505<br/>
+                  <span class="grey">Website:</span> <a href="http://www.nuovacontec.com" target="_blank">www.nuovacontec.com</a>
                   </p>
                 </div>
               </div>
@@ -740,32 +603,6 @@ NET - vysokotlaká technika, spol. s r. o.</h4>
                   <span class="grey">Location:</span> Montereale Valcellina, Italy<br/>
                   <span class="grey">Phone:</span> (+39) 0427 799505<br/>
                   <span class="grey">Website:</span> <a href="http://www.nuovacontec.com" target="_blank">www.nuovacontec.com</a>
-                  </p>
-                </div>
-                <div class="col-sm-4">
-                  <h4>PTC Italiana</h4>
-                  <p>
-                  <span class="grey">Location:</span> Genova, Italy<br/>
-                  <span class="grey">Phone:</span> (+39) 010 6509422<br/>
-                  <span class="grey">Website:</span> <a href="http://www.ptcitaliana.com" target="_blank">www.ptcitaliana.com</a>
-                  </p>
-                </div>
-              </div>
-              <div class="row text-right">
-                <a href="#top" title="To Top">
-                  <i class="fa fa-caret-up"></i><small class="thin"> Top</small>
-                </a>
-              </div>
-            </li>
-            <li class="list-group-item">
-              <h2 id="Netherlands">Netherlands</h2>
-              <div class="row">
-                <div class="col-sm-4">
-                  <h4>DERC Salotech</h4>
-                  <p>
-                  <span class="grey">Location:</span> Oud-Beijerland, Netherlands<br/>
-                  <span class="grey">Phone:</span> (+31) (0)186 621484<br/>
-                  <span class="grey">Website:</span> <a href="http://www.salotech.nl" target="_blank">www.salotech.nl</a>
                   </p>
                 </div>
               </div>
@@ -812,24 +649,6 @@ NET - vysokotlaká technika, spol. s r. o.</h4>
               </div>
             </li>
             <li class="list-group-item">
-              <h2 id="Portugal">Portugal</h2>
-              <div class="row">
-                <div class="col-sm-4">
-                  <h4>Neoparts</h4>
-                  <p>
-                  <span class="grey">Location:</span> Lisbon, Portugal<br/>
-                  <span class="grey">Phone:</span> (+351) 21 855 83 00<br/>
-                  <span class="grey">Website:</span> <a href="http://www.neoparts.pt" target="_blank">www.neoparts.pt</a>
-                  </p>
-                </div>
-              </div>
-              <div class="row text-right">
-                <a href="#top" title="To Top">
-                  <i class="fa fa-caret-up"></i><small class="thin"> Top</small>
-                </a>
-              </div>
-            </li>
-            <li class="list-group-item">
               <h2 id="Romania">Romania</h2>
               <div class="row">
                 <div class="col-sm-4">
@@ -850,14 +669,6 @@ NET - vysokotlaká technika, spol. s r. o.</h4>
             <li class="list-group-item">
               <h2 id="Spain">Spain</h2>
               <div class="row">
-                <div class="col-sm-4">
-                  <h4>Hammelmann S.L.</h4>
-                  <p>
-                  <span class="grey">Location:</span> Zaragoza, Spain<br/>
-                  <span class="grey">Phone:</span> (+34) 976 504 753<br/>
-                  <span class="grey">Website:</span> <a href="http://www.hammelmann.es" target="_blank">www.hammelmann.es</a>
-                  </p>
-                </div>
                 <div class="col-sm-4">
                   <h4>Motorrens S.L.</h4>
                   <p>
@@ -882,41 +693,6 @@ NET - vysokotlaká technika, spol. s r. o.</h4>
                   <span class="grey">Location:</span> Holsbybrunn, Sweden<br/>
                   <span class="grey">Phone:</span> (+46) 383 50801<br/>
                   <span class="grey">Website:</span> <a href="http://www.aquajet.se" target="_blank">www.aquajet.se</a>
-                  </p>
-                </div>
-              </div>
-              <div class="row text-right">
-                <a href="#top" title="To Top">
-                  <i class="fa fa-caret-up"></i><small class="thin"> Top</small>
-                </a>
-              </div>
-            </li>
-            <li class="list-group-item">
-              <h2 id="Switzerland">Switzerland</h2>
-              <div class="row">
-                <div class="col-sm-4">
-                  <h4>N.M. Steinbrecher AG</h4>
-                  <p>
-                  <span class="grey">Location:</span> Weisslingen, Switzerland<br/>
-                  <span class="grey">Phone:</span> (+41) 052 396 30 60<br/>
-                  <span class="grey">Website:</span> <a href="http://www.steinbrecherag.ch" target="_blank">www.steinbrecherag.ch</a>
-                  </p>
-                </div>
-              </div>
-              <div class="row text-right">
-                <a href="#top" title="To Top">
-                  <i class="fa fa-caret-up"></i><small class="thin"> Top</small>
-                </a>
-              </div>
-            </li>
-            <li class="list-group-item">
-              <h2 id="UK">United Kingdom</h2>
-              <div class="row">
-                <div class="col-sm-4">
-                  <h4>StoneAge Europe</h4>
-                  <p>
-                  <span class="grey">Location:</span> Malvern, United Kingdom<br/>
-                  <span class="grey">Phone:</span> (+44) (0) 1684 892065
                   </p>
                 </div>
               </div>
@@ -1161,27 +937,7 @@ NET - vysokotlaká technika, spol. s r. o.</h4>
             <li class="list-group-item">
               <!-- 1st row -->
               <div class="row first">
-                <div class="col-sm-4">
-                  <div class="dealer">
-                    <h4>Interpromo, LLC</h4>
-                    <p>
-                    <span class="grey">Location:</span> Rostov-on-Don, Russian Federation<br/>
-                    <span class="grey">Phone:</span> (+7) 863 266 31 17<br/>
-                    <span class="grey">Website:</span> <a href="http://www.interpromo.org" target="_blank">www.interpromo.org</a>
-                    </p>
-                  </div>
-                </div>
-                <div class="col-sm-4">
-                  <div class="dealer">
-                    <h4>Waterjet LLC</h4>
-                    <p>
-                    <span class="grey">Location:</span> Kazan, Russian Federation<br/>
-                    <span class="grey">Phone:</span> (+7) 843 5184720<br/>
-                    <span class="grey">Website:</span> <a href="http://www.waterjet.su" target="_blank">www.waterjet.su</a>
-                    </p>
-                  </div>
-                </div>
-                <div class="col-sm-4">
+                <div class="col-sm-6">
                   <div class="dealer">
                     <h4>Z-Techno Co.</h4>
                     <p>
